ok, now its done
i thinc

--- a/c_passagens.html
+++ b/c_passagens.html
@@ -23,37 +23,32 @@
   	<form action="https://formspree.io/f/mknpzqbb" method="POST">
       <table align="center">
         <tr align="top">
-           <td id="formcamp">
-
-            <img src="carreta fura ca4.png" width="424" height="215" style="align-self: left"> 
-           
-          </td>
           <td id="formcamp">
             <label for="name" >
-              Seu Nome:<br> <input type="text" id="name" name="nome-cliente" font-size="30px"/> <br><br>
+              Seu Nome:<br> <input type="text" id="name" name="nome-cliente" style="font-size: 30px"/> <br><br>
             </label>
 
             <label for="data">
-              Data do furacão:<br> <input type="date" id="date" name="datadopasseio"/> <br><br>
+              Data do furacão:<br> <input type="date" id="date" name="datadopasseio" style="font-size: 30px"/> <br><br>
             </label>
 
             <label for="passagens"> Quantidade de passagens:  <br>
-              <input type="number" id="num" name="passages" min="0" max="40"/> <br> <br>
+              <input type="number" id="num" name="passages" min="0" max="40" style="font-size: 30px"/> <br> <br>
             </label>
           </td>
 
           <td id="formcamp" align="right">
             <label> Rota: <br>
-              <select id="rota" name="Rota">
+              <select id="rota" name="Rota" style="font-size: 30px">
                   <option value="r1">Rota 1 (Natal-Salvador)</option>
                   <option value="r2">Rota 2 (Natal-São Luís)</option>
               </select>
             </label>
             <br><br>
              <table align="center">
-                <td id="formcamp" style="padding-right: 30px">
-                  <label> Início: <br>
-                    <select id="ci" name="inicio">
+                <td id="formcamp" style="padding-right: 30px;">
+                  <label style="font-size: 30px"> Início: <br>
+                    <select id="ci" name="inicio" style="font-size: 30px">
                       <option value="Maceió">Maceió</option>
                       <option value="Salvador">Salvador</option>
                       <option value="Fortaleza">Fortaleza</option>
@@ -68,8 +63,8 @@
 
                 </td>
                 <td id="formcamp" align="right">
-                  <label>   Destino:<br>
-                    <select id="ci" name="destino">
+                  <label style="font-size: 30px">   Destino:<br>
+                    <select id="ci" name="destino" style="font-size: 30px">
                       <option value="Maceió">Maceió</option>
                       <option value="Salvador">Salvador</option>
                       <option value="Fortaleza">Fortaleza</option>
@@ -86,17 +81,12 @@
 
  <br>
             <label> Veículo: <br>
-              <select id="vei" name="Carretas">
+              <select id="vei" name="Carretas" style="font-size: 30px">
                   <option value="carreta1">Carreta normal (;-;)</option>
                   <option value="carreta2">Carreta furacã1 braba d+ (:D)</option>
               </select>
             </label>
             <br><br>  
-
-          </td>
-                    <td id="formcamp">
-            <img src="carreta fura ca1.png" width="424" height="215" style="align-self: right"> 
-          </td>
         </tr>
       </table>
 
@@ -105,9 +95,15 @@
   	
   	</form>
      <br>
-
+ 
   </div>
-  <div align="center" id="yellowback" style="background-color:#5B52D9;">
+   <div align="center" >
+    <br>
+      <img src="carreta fura ca4.png"  width="724" height="355"  style="display: inline-block; padding-left: 5%;padding-right: 5%"> 
+       <img src="carreta fura ca1.png"  width="724" height="355" style="display: inline-block; padding-left: 5%;padding-right: 5%"> 
+    <br>
+  </div>
+  <div align="center" id="yellowback">
   <H1>Rotas</H1>
 
 
