--- a/home.html
+++ b/home.html
@@ -44,8 +44,8 @@
 	<div  id="greenback" style="margin-top: 5%">
 		<table cellspacing="5px" align="center" width="100%">
 			<tr>
-				<td id="greenback", style="padding-left: 3%; font-size: 50px">
-					<h2>História da Carreta Furacão</h2>
+				<td id="greenback", style="padding-left: 3%; font-size: 40px">
+					<h2 style=" font-size: 50px">História da Carreta Furacão</h2>
 					A melhor forma de viajar: passo a passo outra <br>
 					vez teve seu início em 1969:<br> 
 					Cantando a liberdade em plena ditadura militar! <br>
