--- a/home.html
+++ b/home.html
@@ -4,75 +4,82 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<title>Carreta furacão</title>
-	<div style="background-color: #0086F5;">	
-		<h1 align="center" style="color: white; font-size: 80px">CARRETA FURACÃO PASSEIOS</h1>
+	<div style="background-color: #0086F5; padding: 1px; box-shadow: 0 5px 15px 0 rgba(0,0,0,0.24), 0 3px 15px 0 rgba(0,0,0,0.19);">	
+		<h1 align="center" style="color: white; font-size: 80px; font-family: helvetica; padding: 0.5%;">CARRETA FURACÃO PASSEIOS</h1>
+		<br>
+		<div align="center">
+				<a href="c_passagens.html"  ><button  id="bbutton" type="button", style="font-size: 40px; width: 480px; ">Comprar Passagem</button></a>
+
+				<a href="f_conosco.html"   ><button  id="bbutton" type="button", style="font-size: 40px; width: 480px; ">Fale Conosco</button></a>
+
+				<a href="fotos.html"   ><button  id="bbutton" type="button", style="font-size: 40px; width: 480px; ">Fotos da Carreta</button></a>
+		</div>
 	</div>
 		
 </head>
-<body  >
-	<table align="center" width="100%">
-		<tr>
-			<td align="center">
-				<a href="c_passagens.html"  ><button  id="button" type="button", style="font-size: 50px; width: 910px; ">Comprar Passagem</button></a>
-			</td>
-			<td align="center">
-				<a href="f_conosco.html"   ><button  id="button" type="button", style="font-size: 50px; width: 910px; ">Fale Conosco</button></a>
-			</td>
-		</tr>
-	</table>
-	
-	
+<body style="background-color: #eeeeff">
 
 
 	<br><br>
-	<div id="yellowback">
-		
-		<table cellpadding="15">
-			<tr>
-				<td>
-				<img src="carreta fura ca3.png" >
-				
-				</td>
-				<td id="yellowback"  style="font-size: 60px;">
-					<p>Siga em frente, olhe para o lado e mostre pro mundo inteiro!</p>
-					<p>A melhor viagem da sua vida!</p>
-				</td>
-			</tr>
-		</table>
-	</div>
 
-	<div  id="greenback" style="margin-top: 5%">
+	<div  id="back" style="margin-top: 2%; border-left: solid 25px #fbf336; background-color: white; box-shadow: 0 5px 15px 0 rgba(0,0,0,0.24), 0 3px 15px 0 rgba(0,0,0,0.19);">
 		<table cellspacing="5px" align="center" width="100%">
 			<tr>
-				<td id="greenback", style="padding-left: 3%; font-size: 40px">
-					<h2 style=" font-size: 50px">História da Carreta Furacão</h2>
-					A melhor forma de viajar: passo a passo outra <br>
-					vez teve seu início em 1969:<br> 
-					Cantando a liberdade em plena ditadura militar! <br>
-					Nossas carretas foram as máquinas que<br> 
-					transportaram os cavaleiros da liberdade<br> 
-					e até hoje prevalecem firmes e fortes,<br> 
-					para trazer a alegria a quem precisa:<br><br>
+				<td>
+					<img src="carreta fura ca3.png", style="padding-right: ; width: 720px; height:360px;" align="right">
+				</td>
+				<td id="back", style="padding-left: 3%; ">
+					<div style="width: 90%;" >
+						<h2 style="font-size: 48px" ><strong>Passeios por todo Nordeste!</strong></h2>
+						<p style="font-size: 30px" align="justify">
+						Vai viajar? Deixa com a carreta furacão! Siga em frente, olhe para o lado e mostre pro mundo inteiro!<br>
+						<strong >A melhor viagem da sua vida!</strong><br>						
+					</div>
 
+				</p>
+				</td>
+
+			</tr>
+		</table>
+	</div>
+
+	<div  id="back" style="margin-top: 2%; border-right: solid 25px #fbf336; background-color: white; box-shadow: 0 5px 15px 0 rgba(0,0,0,0.24), 0 3px 15px 0 rgba(0,0,0,0.19);">
+		<table cellspacing="5px" align="center" width="100%">
+			<tr>
+				<td id="back", style="padding-left: 2%; ">
+					<div style="width: 90%;" >
+						<h2 style="font-size: 48px" ><strong>História da Carreta Furacão</strong></h2>
+						<p style="font-size: 30px" align="justify">
+						A Carreta Furacão surgiu em 2007, na cidade de Ribeirão Preto (São Paulo), ainda fazendo viagens no estilo "trenzinho da alegria". Em 2010, essa maravilha Brasileira fica conhecida pela alegria dos personagens mais dançantes da história. Hoje, a Carreta Furacão quebra todos os recordes, realizando viagens através de todos os estados do Nordeste!</p>
+
+					</div>
+
+				</p>
 				</td>
 				<td>
-					<img src="carreta fura ca2.png", style="padding-right: 3%;" align="right">
+					<img src="carreta fura ca2.png", style="padding-right: 0%; width: 720px; height:360px;" align="right">
 				</td>
 			</tr>
 		</table>
 	</div>
-	<div id="noback">
-		<img src="instagram.png" align="left"  style="display: inline-block; width: 3%; height: 3%; padding-left: 1%; padding-top: 4%; display: inline-block;">
+	<br>
+	<div id="noback" style="background-color: #ffffff; border-radius: 15px; width:  30%; box-shadow: 0 5px 15px 0 rgba(0,0,0,0.24), 0 3px 15px 0 rgba(0,0,0,0.19); ">
+		<img src="instagram.png" align="left"  style="display: inline-block; width: 12%; height: 2%; padding-left: 1%; padding-top: 3%; display: inline-block;   ">
 			
-		<p align="left" style="font-size:36px; padding-left: 4.5%; padding-top: 4% ">@juroquesoucorno</p>
+		<p align="left" style="font-size:35px; padding-left: 15%; padding-top: 7%; padding-bottom: 1%">@CarretaFuracao?!</p>
 
+		<img src="gmail.png" align="left"  style="display: inline-block; width: 12%; height: 2%; padding-left: 1%; padding-top: 3%; display: inline-block;   ">
+			
+		<p align="left" style="font-size:35px; padding-left: 15%; padding-top:  7%; padding-bottom: 1%"> vaidecarreta@gmail.com</p>
 
-		<p sty align="right" style="font-family:Comic Sans MS; font-size:28px; padding-right:1%; padding-top: 0px; ">
-			Restou alguma dúvida? <br><br>
-			Nossos contatos: <br>
- 			* vaidecarreta@gmail.com<br>
- 			* (66) 98673-0666
- 		</p>
-	</div>>
+		<img src="twitter.png" align="left"  style="display: inline-block; width: 12%; height: 2%; padding-left: 1%; padding-top: 2%; display: inline-block;   ">
+			
+		<p align="left" style="font-size:35px; padding-left: 15%; padding-top:  7%; padding-bottom: 1% "> @CarretaFuracao</p>
+
+		<img src="whatsapp.png" align="left"  style="display: inline-block; width: 12%; height: 2%; padding-left: 1%; padding-top: 2%; display: inline-block;   ">
+			
+		<p align="left" style="font-size:35px; padding-left: 15%; padding-top:  7%; padding-bottom: 7%"> (25) 4002-8922</p>
+
+	</div>
 </body>
 </html>
