just a little fix

--- a/c_passagens.html
+++ b/c_passagens.html
@@ -14,7 +14,7 @@
 
         
 
-        <a href="f_conosco.html"   ><button  id="bbutton" type="button", style="font-size: 40px; width: 580px; ">Fotos da Carreta</button></a>
+        <a href="fotos.html"   ><button  id="bbutton" type="button", style="font-size: 40px; width: 580px; ">Fotos da Carreta</button></a>
     </div>
   </div>
     
